# tomodachi

./: .gitignore  README.md  pyproject.toml
tests/: test_tomodachi.py
tomodachi/: __init__.py
tomodachi/backend/: app.py  deco.py
tomodachi/backend/routes/: misc.py
tomodachi/frontend/: tailwind.config.js
tomodachi/frontend/tps/: index.html
