[tool.poetry]
name = "tomodachi"
version = "0.1.0"
description = "An otaku's best friend!"
authors = ["justanotherbyte"]

[tool.poetry.dependencies]
python = "^3.8"
pywebview = "^3.6.3"
starlette = "^0.19.0"
Jinja2 = "^3.1.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
